# iot

./: .editorconfig  .gitignore  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  .mlc-config.json  .vsts-ci.yml  AllProjects.sln  Build.cmd  ConsoleApp1  Directory.Build.props  Directory.Build.targets  IoT.sln  NuGet.config  README-nuget.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.TXT  arch.drawio  azure-pipelines.yml  build.proj  build.sh  dummy.txt  global.json  nj.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  fabricbot.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: CSharpExpert.agent.md  expert-dotnet-software-engineer.agent.md
.github/policies/: labelManagement.issueOpened.yml  resourceManagement.yml
.github/skills/: README.md
.github/workflows/: arduino.yml  dotnet-desktop.yml  markdown-checks.yml  publish-nightly.yml
Documentation/: CONTRIBUTING.md  Coding-guidelines.md  Devices-conventions.md  DiagnosticIDs.md  How to Deploy an IoT App.md  How to Prepare a Publish Profile.md  How-to-Deploy-an-IoT-App.md  How-to-start-your-app-automatically-on-boot-using-systemd.md  How-to-start-your-app-automatically-on-boot.md  README.md  creating-new-package.md  creating-new-release.md  getting-started.md  glossary.md  gpio-beginners-guide.md  gpio-linux-libgpiod.md  iot-project-setup.md  raspi-Docker-GPIO.md  raspi-i2c.md  raspi-libgpiodv2.md  raspi-pwm.md  raspi-spi.md  roadmap.md  troubleshooting.md
Documentation/deployment/: containers.md  cross-compilation.md  systemd-services.md
Documentation/fundamentals/: choosing-drivers.md  debouncing.md  gpio-basics.md  reading-datasheets.md  understanding-protocols.md
Documentation/protocols/: gpio.md  i2c.md  pwm.md  spi.md  uart.md
config/: DotnetIoT.snk  SignClient.json  filelist.txt
eng/: Analyzers.props  ArduinoCsCI.cmd  Build.props  Compilers.props  CrosstargetingRIDs.targets  Publishing.props  Signing.props  StyleCop.Analyzers.ruleset  Tools.props  Version.Details.xml  Versions.external.props  Versions.props  sdl-tsa-vars.config  sendToHelix.proj  stylecop.json  toolchain.cmake
eng/common/: CIBuild.cmd  README.md  cibuild.sh  internal-feed-operations.ps1  internal-feed-operations.sh  msbuild.sh  tools.ps1  tools.sh
issues/2261/: comments
samples/: Device Binding Template.md  Directory.Build.props  README.md  nuget.config  samples.sln
samples/DeviceApiTester/: DeviceApiTester.csproj  DeviceApiTester.sln  ReadMe.md
samples/M5StackRemoteDisplay/: Arguments.cs  M5StackRemoteDisplay.csproj  NmeaDataSet.cs  NmeaValueDataSet.cs  Program.cs  README.md  RemoteControl.cs  ScreenMode.cs
samples/PIR/: README.md
samples/arduino-demo/: Program.cs  README.md  arduino-demo.csproj  nuget.config
samples/bmp280-sensor-azure-iot-hub/: DNSensorAzureIoTHub.csproj  Program.cs  Readme.md  create-certificate.md  publish.bat
samples/force-sensitive-resistor/: FsrWithAdcSample.cs  FsrWithCapacitorSample.cs  Program.cs  README.md  force-sensitive-resistor.csproj
samples/led-animate/: AnimateLeds.cs  (+3 more)
src/Native/: CMakeLists.txt  build-native.proj  build-native.sh  copyLibgpiod.sh  gen-buildsys-clang.sh  moveLibgpiod.sh
src/Native/System.Device.Gpio.Native/: CMakeLists.txt  libgpiod.c
tools/: Directory.Build.props  Directory.Build.targets
(+5104 files in other folders)
